FractalJDE 5.40.0
usr/bin holds something now.

It held a loader and a system library and nothing a person could type, and the Terminal
handed you to cmd.exe with none of this system on the path, which is a command line for
the machine underneath rather than for this one.

Five tools: sw_vers, defaults, mdfind, mdls and open. Each is a Mach-O executable written
the way the metadata server is, carrying the tools' code and saying where it starts, and
none of them links AppKit. They are small because a framework already does the work; the
tool turns arguments into a call and a result into lines.

A shell cannot run a Mach-O, so a .cmd and a .sh sit beside each and start the loader on
it, as a bundle's launchers do. Neither holds an absolute path, so a volume that is copied
still works, and the Terminal opens with usr/bin in front of the path.

The volume says what it is in System/Library/CoreServices/SystemVersion.plist, which is
where sw_vers looks and where a Mac keeps it. open scans what is installed before it
decides: without that, every file fell through to the host system, which looks like
working and is a different program opening it. FMUserDefaults grew the three things
defaults needs and NSUserDefaults has: dictionaryRepresentation, remove, and the domains.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>